--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -7,3 +7,22 @@
   height: 50px;
   border-radius: 30px;
 }
+
+
+
+
+.item span {
+  margin-left: 10px;
+}
+.item button {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+.item button img {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin-left: -9px;
+}
