--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,4 +1,20 @@
-.content {
-    grid-area: c;
-    background-color: cornflowerblue;
-  }
+.dialogs {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+}
+.dialogs__items {
+  padding: 10px;
+}
+.dialog.active {
+  color: gold;
+}
+.dialog {
+  padding: 10px;
+}
+
+.messages {
+
+}
+.message {
+
+}
