--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,3 +7,11 @@
   width: 20px;
 }
 
+.loginBlock {
+  float: right;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+.loginBlock a {
+  color: white;
+}
