--- a/src/components/common/FormsControl/FormsControl.module.css
+++ b/src/components/common/FormsControl/FormsControl.module.css
@@ -8,3 +8,10 @@
 .formControl.error span {
     color: red;
 }
+
+.fromSummeryError {
+    border: 2px solid red;
+    padding: 5px;
+    color: rgb(245, 72, 72);
+    display: inline-block;
+}
