--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,6 +1,20 @@
 .info {
-    padding: 10px;
+  padding: 10px;
 }
 .contacts {
-    margin-left: 20px;
+  margin-left: 20px;
+}
+
+.mainPhoto {
+  max-width: 200px;
+}
+
+.contact {
+  padding-left: 20px;
+}
+.fromSummeryError {
+  border: 2px solid red;
+  padding: 5px;
+  color: rgb(245, 72, 72);
+  display: inline-block;
 }
